--- a/blog.css
+++ b/blog.css
@@ -211,10 +211,14 @@ color:var(--primary-light);
 }
 /* Section styles */
 .section-title {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 15px;
-    color: black;
+  font-family: Oswald;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 64px;
+  letter-spacing: 0%;
+    margin-left: 20px;
+    margin-bottom: 20pxpx;
+    color: rgba(0, 0, 0, 1);
 }
 
 /* Latest news section *//* Featured Article Adjustments */
@@ -227,28 +231,43 @@ color:var(--primary-light);
 }
 
 .article-image-container {
-  height: 265px;
+  
+  width: 1000px;
+height: 637px;
+
+
 }
 
 .featured-image {
   object-position: center top;
   mix-blend-mode: multiply;
+  width: 1000px;
+height: 637px;
+
+
 }
 
 
-
+.article-main-content{
+  padding: 31px;
+  /* background: linear-gradient(180deg, rgba(0, 0, 0, 0.2)0%, #00000033 100%); */
+  position: absolute;
+  z-index: 1;
+  top: 332px;
+}
 .article-content {
   padding: 31px;
   /* background: linear-gradient(180deg, rgba(0, 0, 0, 0.2)0%, #00000033 100%); */
   position: relative;
   z-index: 1;
   
+  
 }
 
 .article-title {
   font-family: Oswald;
-font-weight: 300;
-font-size: 31px;
+font-weight: 400;
+font-size: 40px;
 line-height: 54px;
 letter-spacing: 0%;
 color: #f8f9fa;
@@ -257,26 +276,31 @@ color: #f8f9fa;
 }
 .secondary-article-title{
   font-family: Oswald;
-  font-weight: 300;
-  font-size: 32px;
+  font-weight: 400;
+  font-size: 40px;
   line-height: 54px;
   letter-spacing: 0%;
-  color: black
+  
+  color:rgba(0, 0, 0, 1);
 }
 
 .article-excerpt1 {
-  font-size: 18px;
-  line-height: 1.6;
+  font-family: Plus Jakarta Sans;
+font-weight: 400;
+font-size: 18px;
+line-height: 28px;
+letter-spacing: 0.5%;
   color: white;
   margin-bottom: 2rem;
   max-width: 100%;
 }
 .article-excerpt {
-  font-size: 14px;
-  line-height: 1.6;
-  color: black;
-  margin-bottom: 2rem;
-  max-width: 100%;
+  font-family: Plus Jakarta Sans;
+font-weight: 400;
+font-size: 14px;
+line-height: 20px;
+letter-spacing: 0.5%;
+color: rgba(68, 64, 69, 1);
 }
 .read-more2{
   font-weight: 700;
@@ -386,10 +410,14 @@ color: #f8f9fa;
 }
 
 .trending-title {
-    font-size: 20px;
-    font-weight: bold;
+  font-family: Oswald;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  letter-spacing: 0%;
+  
     margin-bottom: 5px;
-    color: #000;
+    color: rgba(17, 13, 18, 1);
 }
 
 .trending-content .read-more {
@@ -420,7 +448,14 @@ color: #f8f9fa;
     padding-right: 20px;
     margin-top: 100px;
   }
+   
+  .featured-image{
+    width: 390px;
+height: 492px;
+top: 230px;
+border-radius: 16px;
 
+  }
   .article-excerpt1{
     font-size: 14px;
   }
@@ -449,8 +484,12 @@ color: #f8f9fa;
   }
 
   .article-excerpt {
-    font-size: 16px;
-    max-width: 100%;
+    font-family: Plus Jakarta Sans;
+font-weight: 400;
+font-size: 14px;
+line-height: 20px;
+letter-spacing: 0.5%;
+
   }
 
   .play-button {
@@ -491,15 +530,25 @@ color: #f8f9fa;
   .article-image-container {
     width: 100%;
   }
-  .article-title {
-   
+  .article-main-content{
+   padding: 2px;
   }
   .article-title,.secondary-article-title {
-    font-size: 20px !important;
-    line-height: 1.2;
+    
+    font-family: Oswald;
+font-weight: 400;
+font-size: 28px !important;
+line-height: 42px;
+letter-spacing: 0%;
+
   }
   .article-excerpt1{
-
+    font-family: Plus Jakarta Sans;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.25%;
+    
   }
   .article-excerpt {
     font-size: 14px;
@@ -552,7 +601,12 @@ color: #f8f9fa;
   }
 
 .trending-title{
-  font-size: 28px;
+  font-family: Oswald;
+font-weight: 400;
+font-size: 28px;
+line-height: 42px;
+letter-spacing: 0%;
+
 }
   .menu-overlay {
     position: fixed;
@@ -609,16 +663,19 @@ color: #f8f9fa;
   .sidebar {
     width: 100%;
   }
-
+  .section-title{
+    
+  }
   .featured-article,
   .news-article.with-image,
   .trending-article {
     flex-direction: column;
+  
   }
 
   .article-image-container {
-    width: 100% !important;
-    height: 250px;
+    width: 1000px;
+    height: 538px;
   }
 
   .article-image{
@@ -635,6 +692,10 @@ color: #f8f9fa;
 
   .secondary-article-title {
     font-size: 32px !important;
-    line-height: 1.4;
+    font-family: Oswald;
+font-weight: 400;
+line-height: 48px;
+letter-spacing: 0%;
+
   }
 }
